[package]
name = "rocket-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
once_cell = "1.17.0"
jsonwebtoken = "8.2.0"
crypto-common = "0.1.6"
sha2 = "0.10.6"
blake3 = "1.3.3"
rsa = "0.7.2"
typenum = "1.16.0"
bytes = "1.3.0"
json = "0.12.4"
rand = "0.8.5"
