[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "io-util"] }
axum = { version = "0.6.8", features = ["query", "headers"] }
axum-extra = { version = "0.5.0", features = ["cookie"] }
serde = { version = "1.0.152", features = ["derive"] }
clap = "4.1.1"
serde_json = "1.0.91"
once_cell = "1.17.0"
jsonwebtoken = "8.2.0"
crypto-common = "0.1.6"
sha2 = "0.10.6"
blake3 = "1.3.3"
rsa = "0.8.0"
typenum = "1.16.0"
bytes = "1.3.0"
json = "0.12.4"
rand = "0.8.5"
cfg-if = "1.0.0"
anyhow = "1.0.68"
figment = { version = "0.10.8", features = ["toml", "env"] }
bzip3 = { version = "0.2.3", features = ["bundled"] }
chrono = "0.4.24"
tokio-util = { version = "0.7.7", features = ["io"] }
